# iot_bridge_monorepo

./: .gitignore  .gitmodules  README.md
Yocto/: Dockerfile  README.md
c_ble/: CMakeLists.txt  dbus.c  dbus.h  main.c  nus.c  nus.h  readme.md  scan.c  scan.h
dashboard-rust/: Cargo.toml
dashboard-rust/src/: main.rs
dbus_exchange/: CMakeLists.txt
dbus_exchange/client/: CMakeLists.txt  main.cpp
dbus_exchange/protobuf_message/: message.proto
dbus_exchange/server/: CMakeLists.txt  main.cpp
esp32_central/: CMakeLists.txt  sdkconfig
esp32_peripheral/: CMakeLists.txt
esp32_peripheral/main/: ble_spp_server_demo.c  ble_spp_server_demo.h
rust_ble/: Cargo.toml  README.md
rust_ble/src/: main.rs
rust_dbus_server/: Cargo.toml
rust_dbus_server/src/: main.rs
