[package]
name = "dashboard-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
tokio-tungstenite = "0.15"
tungstenite = "0.16"
futures-util = "0.3"
url = "2.2"
warp = "0.3"
tokio-stream = "0.1.16"
zbus = "4.4.0"
